<resources>
    <string name="app_name">essence</string>
    <string name="greeting">What you want to\nLearn Today?</string>
    <string name="title">Popular Courses</string>
    <string name="view_all">view all</string>
    <string name="course_title">3d character Design Blender</string>
    <string name="rating">5.0</string>
    <string name="timer">30 hours</string>
    <string name="lang">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createaccount">Create Account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="Login"><u>LOGIN</u></string>
    <string name="welcome">Welcome Back!</string>
    <string name="login_to_con">Login to continue</string>
    <string name="pass">Password</string>
    <string name="forgotpass"><u>Forgot Password?</u></string>
    <string name="createaccount2"><u>CREATE ACCOUNT</u></string>
    <string name="login">Login</string>
    <string name="phone">Phone Number</string>
    <string name="choose_class">Choose Your Class</string>
    <string name="class1">Class 6</string>
    <string name="home">Home</string>
    <string name="live">Live</string>
    <string name="doubt">Doubts</string>
    <string name="profile">Profile</string>
    <string name="video_title">01. Introduction</string>
    <string name="video_duration">01 Hour, 10 min</string>
    <string name="status">Subscription end:- Free</string>
    <string name="free">Free</string>
    <string name="primium">Premium</string>
    <string name="total_lec">20</string>
    <string name="total_lec_text">Total Lecture</string>
    <string name="total_attend_text">Total Attendence</string>
    <string name="update_name">Update Name</string>
    <string name="update_class">Update Class</string>
    <string name="share">Share App</string>
    <string name="logout">Logout</string>
    <string name="price">$10</string>
    <string name="about_head">About this course</string>
    <string name="about_des">The lexical analyzer is also called scanner. b. The lexical analyzer phase takes source program as an input and separates characters of source language into groups of strings called token. c. These tokens may be keywords identifiers, operator symbols and punctuation symbols</string>
    <string name="video_quality">Video Quality</string>
    <string name="Low_quality">Low Quality</string>
    <string name="High_quality">High Quality</string>
    <string name="duration">From 11/02/23 to 11/03/23</string>
    <string name="time">08:10 AM</string>
    <string name="join">Join</string>
    <string name="title_2">Special Batch</string>
    <string name="warning">This is a warning</string>
    <string name="time2">Today, 5:30 PM (2 hr)</string>
    <string name="live_des">Join now, and see you in \nclass!</string>
    <string name="txt_live">Don\'t miss it!</string>
    <string name="txt_live_join">Join now</string>
    <string name="txt_live_class">Live Classses</string>
    <string name="txt_live_des">The best online tuitions\nfor LIVE doubt solving and \n1-on-1 attention</string>
    <string name="live_classes_txt">Live classes for you</string>
    <string name="Mathematics">Mathematics</string>
    <string name="chatper">Relation and function</string>
    <string name="title_3">Games</string>
    <string name="class3">Class 5</string>
    <string name="subject">Subject Name</string>
    <string name="upload">Upload</string>
    <string name="subject_des">Problem Statement</string>
    <string name="class7">Class 7</string>
    <string name="class8">Class 8</string>
    <string name="class9">Class 9</string>
    <string name="class10">Class 10</string>
</resources>