<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="5dp"
    app:layout_insetEdge="start"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/acme"
        android:text="@string/course_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coursr_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/coursr_duration"
        android:fontFamily="@font/calistoga"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coursr_duration"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/btn_color"
        android:padding="10dp"
        android:text="@string/join"
        android:textAllCaps="false"
        app:cornerRadius="5dp" />
</RelativeLayout>
</androidx.cardview.widget.CardView>